--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
             <nav class="menu">
                 <ul>
-                  <li><a href="/other1.html">Otra pagina </a></li>
-                  <li><a href="/other2.html">Siguiente pagina</a></li>
+                  <li><a href="./other1.html">Otra pagina </a></li>
+                  <li><a href="./other2.html">Siguiente pagina</a></li>
                 </ul>
               </nav>
               
